--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "ng-zorro-antd": "^8.3.1",
+    "ngx-countdown-timer": "^0.1.9",
     "path": "^0.12.7",
     "primeicons": "^2.0.0",
     "primeng": "^8.0.4",
