--- a/angular.json
+++ b/angular.json
@@ -104,10 +104,16 @@
                             "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
                             "./node_modules/bootstrap/dist/css/bootstrap.css",
                             "./node_modules/bootstrap/dist/css/bootstrap.css",
-                            "src/styles.scss",
+                            "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "styles/bootstrap-4.4.1-dist/css/bootstrap.min.css",
+                             "styles.scss",
                             "src/assets/bootstrap-social.css"
                         ],
-                        "scripts": []
+                        "scripts": [
+                            "../node_modules/jquery/dist/jquery.min.js",
+                            "../node_modules/popper.js/dist/umd/popper.min.js",
+                            "../node_modules/bootstrap/dist/js/bootstrap.min.js"
+                        ]
                     }
                 },
                 "lint": {
@@ -123,6 +129,7 @@
                         ]
                     }
                 },
+                
                 "e2e": {
                     "builder": "@angular-devkit/build-angular:protractor",
                     "options": {
