--- a/package.json
+++ b/package.json
@@ -27,16 +27,20 @@
     "@angular/platform-browser-dynamic": "~8.2.5",
     "@angular/router": "~8.2.5",
     "@auth0/angular-jwt": "^3.0.1",
+    "@ngx-loading-bar/core": "^4.2.0",
+    "@ngx-loading-bar/router": "^4.2.0",
     "angular-font-awesome": "^3.1.2",
     "angular-material": "^1.1.20",
     "angularx-social-login": "^1.2.7",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "bootstrap-social": "^5.1.1",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
     "ng-zorro-antd": "^8.3.1",
     "ngx-countdown-timer": "^0.1.9",
     "path": "^0.12.7",
+    "popper.js": "^1.16.0",
     "primeicons": "^2.0.0",
     "primeng": "^8.0.4",
     "rxjs": "~6.4.0",
